# pka_index_backend

./: .env  Cargo.toml  sqlx-data.json
.cargo/: config.toml
data/: pka_db.sqlite3  pka_db.sqlite3-shm  pka_db.sqlite3-wal
migrations/: 20211227201044_pka_episode.down.sql  20211227201044_pka_episode.up.sql  20211227201347_pka_event.down.sql  20211227201347_pka_event.up.sql  20211227201353_pka_youtube_details.down.sql
src/: error.rs  main.rs  setup.rs
src/conduit/: mod.rs  pka_episode.rs
src/handler/: episode.rs
src/models/: custom_path.rs  json_response.rs  mod.rs  pka_episode.rs  pka_event.rs  pka_youtube_details.rs  sqlx_types.rs
