[package]
name = "pka_index_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

[dependencies.serde]
version = "1"
feature = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tower-http]
version = "0.2"
features = ["trace"]

[dependencies.tokio]
version = "1.15"
features = ["rt", "macros"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

